--- a/WEB/giaodien_covid/index.html
+++ b/WEB/giaodien_covid/index.html
@@ -19,7 +19,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <script src="Asset/mycode.js"></script>
     <link href="Asset/Style.css" rel="stylesheet" />
 
 
@@ -29,5 +28,81 @@
     <div class="chart-container">
         <canvas id="covidChart"></canvas>
     </div>
+    <script>
+        $(document).ready(function () {
+            const api = '/api.aspx';
+            var data_dui_di = {
+                action: 'LIST'
+            };
+
+            $.post(api, data_dui_di, function (data) {
+                var json = JSON.parse(data);
+                console.log(data)
+                if (json.ok === 1) {
+                    var labels = [];
+                    var soCaMac = [];
+                    var soCaTuVong = [];
+                    var soCaHoiPhuc = [];
+                    var soCaDangDieuTri = [];
+
+                    for (var cov of json.data) {
+                        labels.push(cov.QUOCGIA);
+                        soCaMac.push(cov.SOCAMAC);
+                        soCaTuVong.push(cov.SOCATUVONG);
+                        soCaHoiPhuc.push(cov.SOCAHOIPHUC);
+                        soCaDangDieuTri.push(cov.SOCADANGDIEUTRI);
+                    }
+
+                    const ctx = document.getElementById('covidChart').getContext('2d');
+                    const covidChart = new Chart(ctx, {
+                        type: 'bar',
+                        data: {
+                            labels: labels,
+                            datasets: [
+                                {
+                                    label: 'Số ca mắc',
+                                    data: soCaMac,
+                                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                                    borderColor: 'rgba(255, 99, 132, 1)',
+                                    borderWidth: 1
+                                },
+                                {
+                                    label: 'Số ca tử vong',
+                                    data: soCaTuVong,
+                                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                                    borderColor: 'rgba(54, 162, 235, 1)',
+                                    borderWidth: 1
+                                },
+                                {
+                                    label: 'Số ca hồi phục',
+                                    data: soCaHoiPhuc,
+                                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                                    borderColor: 'rgba(75, 192, 192, 1)',
+                                    borderWidth: 1
+                                },
+                                {
+                                    label: 'Số ca đang điều trị',
+                                    data: soCaDangDieuTri,
+                                    backgroundColor: 'rgba(153, 102, 255, 0.2)',
+                                    borderColor: 'rgba(153, 102, 255, 1)',
+                                    borderWidth: 1
+                                }
+                            ]
+                        },
+                        options: {
+                            scales: {
+                                y: {
+                                    beginAtZero: true
+                                }
+                            }
+                        }
+                    });
+                }
+            }).fail(function () {
+                console.error('Failed to fetch data from API');
+            });
+        });
+
+    </script>
 </body>
 </html>
